# showdown-environment

./: .gitignore  .gitmodules  LICENSE  README.md  config_example.json  dex.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_validated.txt
env/state/: pokemon.py
example/: actor.py  critic.py  encoders.py  memory.py  model.py  player.py  train.py
json/: update_json_files.py
poke_dojo/showdown/: environment.py  player.py
poke_dojo/state/: pokemon.py  team.py
pokemon_showdown_environment/data/: dex.py
reinforcement_learning/: encoders.py  experience.py  main.py  memory.py  model.py
reinforcement_learning_example/: encoders.py  memory.py  model.py
scripts/: dex.js  package-lock.json
showdown_environment/data/: dex.py
showdown_environment/showdown/: environment.py  player.py
showdown_environment/state/: battle.py  move.py  pokemon.py  team.py
src/: battle.py  client.py  dex.py  env.py  main.py  model.py  nn.py  obs_parser.py  observation.py  observation_parser.py  player.py  scrape_data.py  state.py  trainer.py
src/poke_dojo/data/: dex.py
src/poke_dojo/showdown/: client.py  environment.py
src/poke_dojo/state/: battle.py  move.py  pokemon.py  team.py
src/pokemon_showdown_env/: environment.py
src/pokemon_showdown_env/data/: dex.py
src/pokemon_showdown_env/reinforcement_learning/: model.py
src/pokemon_showdown_env/showdown/: agent.py  client.py  environment.py  (+1 more)
src/state/: pokemon_state.py  state.py  team_state.py
src/states/: move_state.py  pokemon_state.py  state.py  team_state.py
(+61 files in other folders)
