[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "showdown_environment"
version = "0.1.0"
authors = [{ name = "Cameron Angliss", email = "cameronangliss99@gmail.com" }]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"

[tool.setuptools.package-data]
src = ["showdown_environment/data/json/**"]
